--- a/Moxie/Web.config
+++ b/Moxie/Web.config
@@ -12,9 +12,12 @@
 				</sectionGroup>
 			</sectionGroup>
 		</sectionGroup>
+		<section name="rewriter" requirePermission="false" type="Intelligencia.UrlRewriter.Configuration.RewriterConfigurationSectionHandler, Intelligencia.UrlRewriter" />
 	</configSections>
 	<appSettings/>
-	<connectionStrings/>
+	<connectionStrings>
+		<add name="strConn" connectionString="Data Source=localhost;Initial Catalog=moxie;Integrated Security=false;User ID=ansss;Password=sssna" />
+	</connectionStrings>
 	<system.web>
 		<!-- 
             Set compilation debug="true" to insert debugging 
@@ -42,12 +45,12 @@
             during the execution of a request. Specifically, 
             it enables developers to configure html error pages 
             to be displayed in place of a error stack trace.
-
-        <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
-            <error statusCode="403" redirect="NoAccess.htm" />
-            <error statusCode="404" redirect="FileNotFound.htm" />
+		-->
+        <customErrors mode="RemoteOnly" defaultRedirect="~/default.aspx">
+            <error statusCode="403" redirect="~/default.aspx" />
+            <error statusCode="404" redirect="~/default.aspx" />
         </customErrors>
-        -->
+        
 		<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -62,6 +65,7 @@
 		</httpHandlers>
 		<httpModules>
 			<add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+			<add name="UrlRewriter" type="Intelligencia.UrlRewriter.RewriterHttpModule, Intelligencia.UrlRewriter" />
 		</httpModules>
 	</system.web>
 	<system.codedom>
@@ -77,6 +81,11 @@
         Information Services 7.0.  It is not necessary for previous version of IIS.
     -->
 	<system.webServer>
+		<!--
+		<modules runAllManagedModulesForAllRequests="true">
+			<add name="UrlRewriter" type="Intelligencia.UrlRewriter.RewriterHttpModule" />
+		</modules>
+		-->
 		<validation validateIntegratedModeConfiguration="false"/>
 		<modules>
 			<remove name="ScriptModule"/>
@@ -91,7 +100,16 @@
 			<add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 		</handlers>
+		<httpErrors existingResponse="PassThrough" />
+
 	</system.webServer>
+	<rewriter>
+		<rewrite url="~/products\.(.+)" to="~/products/default.aspx" />
+		<rewrite url="~/company\.(.+)" to="~/aboutus/default.aspx" />
+		<rewrite url="~/aboutus\.(.+)" to="~/aboutus/default.aspx" />
+		<rewrite url="~/contact\.(.+)" to="~/contactus/default.aspx" />
+		<rewrite url="~/contactus\.(.+)" to="~/contactus/default.aspx" />
+	</rewriter>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1" appliesTo="v2.0.50727"><dependentAssembly>
 				<assemblyIdentity name="System.Web.Extensions" publicKeyToken="31bf3856ad364e35"/>
